--- a/css/style.css
+++ b/css/style.css
@@ -1134,7 +1134,7 @@ Social Links
 }
 
 /* ==========================================================================
-Minor AEON.cash-specific edits
+Minor ar-net.github.io-specific edits
  ========================================================================== */
 
 .headline, .banner-content h1 {
