--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
           <br>
           <h3>{{ site.data.i18n.content.footer.column1.heading2[page.lang] }}</h3>
           <p>{{ site.data.i18n.content.footer.column1.paragraph3[page.lang] }}</p>
-          <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSci2UitA67N0W_xgSPLlGj6acGnTOtTdDR_ODZwXTHXZsWnCQ/viewform" rel="nofollow">{{ site.data.i18n.content.footer.column1.paragraph4[page.lang] }}</a></p>
+          <p><a href="https://" rel="nofollow">{{ site.data.i18n.content.footer.column1.paragraph4[page.lang] }}</a></p>
           <br>
         </div>
         <!-- End Footer Intro -->
@@ -22,17 +22,14 @@
           <div>
             <h3>{{ site.data.i18n.content.footer.column2.heading1[page.lang] }}</h3>
             <ul class="quick-links">
-              <li><a href="https://tradeogre.com/exchange/BTC-AEON" rel="nofollow">TradeOgre</a> [aeon&#x21D4;btc]</li>
+              <li><a href="https://tradeogre.com/exchange/BTC-ARQ" rel="nofollow">TradeOgre</a> [aeon&#x21D4;btc]</li>
             </ul>
           </div>
           <br>
           <div>
             <h3>{{ site.data.i18n.content.footer.column2.heading2[page.lang] }}</h3>
             <ul class="quick-links">
-              <li><a href="http://104.168.163.221" rel="nofollow">104.168.163.221</a></li>
-              <li><a href="http://209.126.84.37:8081" rel="nofollow">209.126.84.37:8081</a></li>
-              <li><a href="https://aeonstats.com" rel="nofollow">aeonstats.com</a></li>
-              <li><a href="https://aeonstats.info" rel="nofollow">aeonstats.info</a></li>
+              <li><a href="https://explorer.arqma.com" rel="nofollow">explorer.arqma.com</a></li>
             </ul>
           </div>
           <br>
@@ -44,7 +41,7 @@
           <div>
             <h3>{{ site.data.i18n.content.footer.column3.heading1[page.lang] }}</h3>
             <ul class="quick-links">
-              <li><a href="http://getmonero.org">Monero</a></li>
+              <li><a href="http://arqma.com">ArQmA</a></li>
               <li><a href="http://cryptonote.org" rel="nofollow" target="_blank">CryptoNote</a></li>
             </ul>
           </div>
@@ -52,15 +49,14 @@
           <div>
             <h3>{{ site.data.i18n.content.footer.column3.heading2[page.lang] }}</h3>
             <ul class="quick-links">
-              <li><a href="https://bitcointalk.org/index.php?topic=641696.0" rel="nofollow" target="_blank">BitcoinTalk</a></li>
-              <li><a href="https://twitter.com/AeonCoin" rel="nofollow" target="_blank">Twitter</a></li>
-              <li><a href="https://www.reddit.com/r/aeon" rel="nofollow" target="_blank">Reddit</a></li>
-              <li><a href="https://monero.stackexchange.com" rel="nofollow" target="_blank">StackExchange</a></li>
-              <li><a href="https://coinwik.org/Aeon" rel="nofollow" target="_blank">Aeon Wiki</a></li>
-              <li><a href="https://github.com/aeonix" rel="nofollow" target="_blank">GitHub</a></li>
-              <li><a href="https://web.libera.chat/#aeon" rel="nofollow" target="_blank">IRC</a></li>
-              <li><a href="https://discord.gg/xWZ2z78" rel="nofollow" target="_blank">Discord</a></li>
-              <li><a href="https://aeon-community.medium.com" rel="nofollow" target="_blank">Medium Blog</a></li>
+              <li><a href="https://bitcointalk.org/index.php?topic=4474605" rel="nofollow" target="_blank">BitcoinTalk</a></li>
+              <li><a href="https://twitter.com/ArQmA_Network" rel="nofollow" target="_blank">Twitter</a></li>
+              <li><a href="https://www.reddit.com/r/arqma" rel="nofollow" target="_blank">Reddit</a></li>
+              <li><a href="https://arqma.github.io/" rel="nofollow" target="_blank">Arqma Wiki</a></li>
+              <li><a href="https://github.com/arqma" rel="nofollow" target="_blank">GitHub</a></li>
+              <li><a href="https://discord.com/invite/s9BQpJT" rel="nofollow" target="_blank">Discord</a></li>
+              <li><a href="https://t.me/joinchat/HNpOMRIiNSoCn0zYrAOofw" rel="nofollow"  target="_blank">Telegram</a></li>
+              <li><a href="https://arqmanetwork.medium.com/" rel="nofollow" target="_blank">Medium Blog</a></li>
             </ul>
           </div>
         </div>
@@ -75,7 +71,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 text-center">
-          <p>Copyright (c) {{ site.data.i18n.launchYear }} - {{ site.data.i18n.currentYear }}, AEON, The Monero Project.</p>
+          <p>Copyright (c) {{ site.data.i18n.launchYear }} - {{ site.data.i18n.currentYear }}, ArQmA Project.</p>
         </div>
       </div>
     </div>
