--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
     <div id="header">
       <nav class="navbar navbar-inverse navbar-fixed-top scroll-fixed-navbar" role="navigation">
       {% if site.data.i18n.content.announce[page.lang] And site.data.i18n.content.announce[page.lang] != "" And site.data.i18n.content.announce[page.lang] != nil %}
-        <div class="announce"><a href="https://github.com/aeonix/aeon-gui/releases/tag/v0.14.1.0-aeon">{{ site.data.i18n.content.announce[page.lang] }}</a></div>
+        <div class="announce"><a href="https://github.com/arqma/arqma/releases/tag/v0.6.1">{{ site.data.i18n.content.announce[page.lang] }}</a></div>
       {% endif %}
         <div class="container">
           <div class="navbar-header">
@@ -12,7 +12,7 @@
               <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand text-logo" href="/{{ page.lang }}/home">
-              <span class="hidden-sm hidden-xs"><img src="/img/aeon-small.png"/></span>
+              <span class="hidden-sm hidden-xs"><img src="/img/arqma-small.png"/></span>
               {{ site.data.i18n.coinName }}
             </a>
           </div>
