--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
           <div>
             <h3>{{ site.data.i18n.content.footer.column2.heading1[page.lang] }}</h3>
             <ul class="quick-links">
-              <li><a href="https://tradeogre.com/exchange/BTC-ARQ" rel="nofollow">TradeOgre</a> [aeon&#x21D4;btc]</li>
+              <li><a href="https://tradeogre.com/exchange/BTC-ARQ" rel="nofollow">TradeOgre</a> [arq&#x21D4;btc]</li>
             </ul>
           </div>
           <br>
