--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -45,7 +45,7 @@ layout: default
       <div class="features col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-0">
         <div class="panel panel-default">
           <div class="panel-body">
-            <img src="/img/icon_secure.png" height="65px" style="margin-top:3px;">
+            <img src="/img/icon_secure.png" height="65" style="margin-top:3px;">
             <h3>{{ site.data.i18n.content.features.feature1.heading[page.lang] }}</h3>
             <p>{{ site.data.i18n.content.features.feature1.desc[page.lang] }}</p>
           </div>
@@ -54,7 +54,7 @@ layout: default
       <div class="features col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-0">
         <div class="panel panel-default">
           <div class="panel-body">
-            <img src="/img/icon_private.png" height="68px" style="margin-top:0px;">
+            <img src="/img/icon_private.png" height="68" style="margin-top:0px;">
             <h3>{{ site.data.i18n.content.features.feature2.heading[page.lang] }}</h3>
             <p>{{ site.data.i18n.content.features.feature2.desc[page.lang] }}</p>
           </div>
@@ -63,7 +63,7 @@ layout: default
       <div class="features col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-0">
         <div class="panel panel-default">
           <div class="panel-body">
-            <img src="/img/icon_untraceable.png" height="60px" style="margin-top:8px;">
+            <img src="/img/icon_untraceable.png" height="60" style="margin-top:8px;">
             <h3>{{ site.data.i18n.content.features.feature3.heading[page.lang] }}</h3>
             <p>{{ site.data.i18n.content.features.feature3.desc[page.lang] }}</p>
           </div>
